--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-23
+Run date: 2018-10-24
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 59
-	You were off by: 46
+	The number I was thinking of is: 77
+	You were off by: 64
 	
 <--
 	[OUTPUT OK]
@@ -295,15 +295,14 @@ Yes Factor
 	Yes Factor
 	Not factor
 	Yes Factor
-	
-	<br>Chapter7, Exercise5.areFactors()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
+	Test: Chapter7, Exercise5.areFactors()
+	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
+	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
+	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
+	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
+	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
+	  TEST FINISHED, PASSED: 6/6.
 	[deductions=0.0]
 	
 	
