--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-23
+Run date: 2018-10-24
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -72,12 +72,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -86,11 +84,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[SUMMARY] 
-	['Swettercise1: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
